--- a/index.html
+++ b/index.html
@@ -147,6 +147,48 @@
             </div>
             <div class="row">
                 <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#immersive" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/immersive.png" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Immersive Recommendation</h4>
+                        <p class="text-muted">New user-centric recommendation framework that incorporates cross-platform and diverse personal digital traces into recommendations.</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#ancile" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/ancile_n.png" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Ancile</h4>
+                        <p class="text-muted">The Ancile Project is developing a new software platform for managing microscale data in a privacy-sensitive manner.</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#retrospective" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/retro.png" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Retrospective Data Learning</h4>
+                        <p class="text-muted">By analyzing personal retrospective data traces, we aim to learn temporal patterns and deviations that reveal individual behavior patterns.</p>
+                    </div>
+                </div>                                                
+                <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#suite" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
@@ -189,48 +231,9 @@
                         <p class="text-muted">Beehive is a research platform designed to study human behavior outside of the lab (in the wild) using small data and ubiquitous mobile technology. </p>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#immersive" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/immersive.png" class="img-responsive" alt="">
-                    </a>
-                    <div class="portfolio-caption">
-                        <h4>Immersive Recommendation</h4>
-                        <p class="text-muted">new user-centric recommendation framework that incorporates cross-platform and diverse personal digital traces into recommendations.</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#ancile" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/ancile_n.png" class="img-responsive" alt="">
-                    </a>
-                    <div class="portfolio-caption">
-                        <h4>Ancile</h4>
-                        <p class="text-muted">The Ancile Project is developing a new software platform for managing microscale data in a privacy-sensitive manner.</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#retrospective" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/retro.png" class="img-responsive" alt="">
-                    </a>
-                    <div class="portfolio-caption">
-                        <h4>Retrospective Data Learning</h4>
-                        <p class="text-muted">By analyzing personal retrospective data traces, we aim to learn temporal patterns and deviations that reveal individual behavior patterns.</p>
-                    </div>
-                </div>
+
+
+
             </div>
         </div>
     </section>
@@ -247,6 +250,23 @@
             <div class="row">
                 <div class="col-lg-12">
                     <ul class="timeline">
+
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/openreclogo2.png" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+
+                                    <h4 class="subheading"><a style="color: black" href="https://www.openrec.ai"> OpenRec Release</a></h4>
+                                    <h6>small data lab</h6>
+                                    February, 2018
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">We are excited to release OpenRec - a modular framework designed for researchers and practitioners to readily adapt and extend state-of-the-art recommendation algorithms. Checkout our <a href="http://www.openrec.ai" style="color: black">website </a> and #wsdm18 <a href="http://www.cs.cornell.edu/~ylongqi/paper/YangBGHE18.pdf" style="color: black">paper</a>.</p>
+                                </div>
+                            </div>
+                        </li>                        
 
                         <li class="timeline-inverted">
                             <div class="timeline-image">
