--- a/index.html
+++ b/index.html
@@ -400,14 +400,6 @@
                 </div>
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <a href=""><img src="img/team/andy.png" class="img-responsive img-circle" alt=""></a>
-                        <h4>Chen-Kang Hsieh</h4>
-                        <p class="text-muted">Post-Doc Student</p>
-
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <div class="team-member">
                         <a href=""><img src="img/team/faisal-a.jpg" class="img-responsive img-circle" alt=""></a>
                         <h4>Faisal Alquaddoomi</h4>
                         <p class="text-muted">PhD Student</p>
@@ -446,13 +438,7 @@
 
                     </div>
                 </div>
-                <div class="col-sm-3">
-                    <div class="team-member">
-                        <a href=""><img src="img/team/james.png" class="img-responsive img-circle" alt=""></a>
-                        <h4>James Kizer</h4>
-                        <p class="text-muted">Developer in residence</p>
-                    </div>
-                </div>
+
                 <div class="col-sm-3">
                     <div class="team-member">
                         <a href=""><img src="img/team/matt.png" class="img-responsive img-circle" alt=""></a>
@@ -460,11 +446,13 @@
                         <p class="text-muted">Developer in residence</p>
                     </div>
                 </div>
+
+
                 <div class="col-sm-3">
                     <div class="team-member">
 
-                        <a href=""><img src="img/team/yulia.png" class="img-responsive img-circle" alt=""></a>
-                        <h4>Yulia Reznik</h4>
+                        <a href=""><img src="img/team/christina.jpeg" class="img-responsive img-circle" alt=""></a>
+                        <h4>Christina Tsangouri</h4>
                         <p class="text-muted">Intern</p>
 
                     </div>
@@ -472,9 +460,9 @@
                 <div class="col-sm-3">
                     <div class="team-member">
 
-                        <a href=""><img src="img/team/josh.png" class="img-responsive img-circle" alt=""></a>
-                        <h4>Josh Gruenstein</h4>
-                        <p class="text-muted">Intern</p>
+                        <a href=""><img src="img/team/jason.jpg" class="img-responsive img-circle" alt=""></a>
+                        <h4>Jason Waterman</h4>
+                        <p class="text-muted">Visiting Professor</p>
 
                     </div>
                 </div>
@@ -1017,11 +1005,39 @@ Though the correspondence of features between the two SDKs isn’t one-to-one, t
                 </div>
                 <div class="container">
                     <div class="row">
+                     
                         <div class="col-sm-3">
                             <div class="team-member">
 
-                                <a href=""><img style="height: 225px;" src="img/team/aliza.png" class="img-responsive img-circle" alt=""></a>
-                                <h4>ALiza Lena Selter</h4>
+                                <a href=""><img style="height: 225px;" src="img/team/james.png" class="img-responsive img-circle" alt=""></a>
+                                <h4>James Kizer</h4>
+                                <!--<p class="text-muted" style="text-align: center">mHealth Research Coordinator</p>-->
+
+                            </div>
+                        </div>
+                        <div class="col-sm-3">
+                            <div class="team-member">
+
+                                <a href=""><img style="height: 225px;" src="img/team/yulia.png" class="img-responsive img-circle" alt=""></a>
+                                <h4>Yulia Reznik</h4>
+                                <!--<p class="text-muted" style="text-align: center">mHealth Research Coordinator</p>-->
+
+                            </div>
+                        </div>
+                        <div class="col-sm-3">
+                            <div class="team-member">
+
+                                <a href=""><img style="height: 225px;" src="img/team/josh.png" class="img-responsive img-circle" alt=""></a>
+                                <h4>Josh Gruenstein</h4>
+                                <!--<p class="text-muted" style="text-align: center">mHealth Research Coordinator</p>-->
+
+                            </div>
+                        </div>
+                        <div class="col-sm-3">
+                            <div class="team-member">
+
+                                <a href=""><img style="height: 225px;" src="img/team/andy.png" class="img-responsive img-circle" alt=""></a>
+                                <h4>Chen-Kang Hsieh</h4>
                                 <!--<p class="text-muted" style="text-align: center">mHealth Research Coordinator</p>-->
 
                             </div>
