--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
                 <div class="col-sm-3">
                     <div class="team-member">
 
-                        <a href=""><img src="img/team/christina_2.jpeg" class="img-responsive img-circle" alt=""></a>
+                        <a href=""><img src="img/team/christina.jpeg" class="img-responsive img-circle" alt=""></a>
                         <h4>Christina Tsangouri</h4>
                         <p class="text-muted">Intern</p>
 
