--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
                         <p class="text-muted">Developer in residence</p>
                     </div>
                 </div>
-                <div class="col-sm-3">
+<!--                 <div class="col-sm-3">
                     <div class="team-member">
 
                         <a href=""><img src="img/team/christina.jpeg" class="img-responsive img-circle" alt=""></a>
@@ -463,7 +463,7 @@
                         <p class="text-muted">Visiting Professor</p>
 
                     </div>
-                </div>
+                </div> -->
                 <div class="col-sm-3">
                     <div class="team-member">
 
