--- a/index.html
+++ b/index.html
@@ -888,6 +888,14 @@ Though the correspondence of features between the two SDKs isn’t one-to-one, t
                                     </div>
                                 </div>  
 
+                                <div class="col-sm-2">
+                                    <div class="team-member">
+
+                                    <a href="https://drugfree.org/person/fred-muench-phd/"><img style="height: 80px;" src="img/team/fred.jpg" class="img-responsive img-circle" alt=""></a>
+                            
+
+                                    </div>
+                                </div>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                             </div>
                         </div>
