kdd website updates

--- a/kdd2018.html
+++ b/kdd2018.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="css/animate.min.css" type="text/css">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/creative.css" type="text/css">
+    <link rel="stylesheet" href="css/creative2.css" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -78,7 +78,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner background-color-black">
-                <h1 style="color:white;"><b>The 1<sup>st</sup> Workshop on Machine Learning and Data Mining for Podcasts (MLDM4P), 2018</b></h1>
+                <h2 style="color:white;"><b>The 1<sup>st</sup> Workshop on Machine Learning and Data Mining for Podcasts (MLDM4P), 2018</b></h2>
                 <hr>
             </div>
         </div>
@@ -108,7 +108,7 @@
                   <div class="text-black-faded text-left">
                     <ul>
 
-                        <li>Podcast Content Modeling
+                        <li><strong>Podcast Content Modeling</strong>
                         <ol style="list-style-type: lower-alpha; padding-bottom: 0;">
                         <li style="margin-left:2em">Speech modeling and understanding for podcasts</li>
                         <li style="margin-left:2em; padding-bottom: 0;">Natural language processing for podcast transcripts and metadata
@@ -122,7 +122,7 @@
                         </ol>
                         </li>
 
-                        <li>Podcast Recommendation
+                        <li><strong>Podcast Recommendation</strong>
                         <ol style="list-style-type: lower-alpha; padding-bottom: 0;">
                         <li style="margin-left:2em">Listener modeling and profiling</li>
                         <li style="margin-left:2em; padding-bottom: 0;">Recommendation algorithms for podcast, including: Contextual podcast recommendation, filter bubbles and echo chambers, interactive podcast recommendation
@@ -130,7 +130,7 @@
                         </ol>
                         </li>
 
-                        <li>Podcast Interaction
+                        <li><strong>Podcast Interaction</strong>
                         <ol style="list-style-type: lower-alpha; padding-bottom: 0;">
                         <li style="margin-left:2em">Personal assistants, including recommendation through voice interface, e.g., Amazon Echo and Google Home</li>
                         <li style="margin-left:2em; padding-bottom: 0;">User interaction and interfaces for podcast consumption, including podcast applications
@@ -301,31 +301,31 @@
                 </div>
             </div>
             <div class="row text-black-faded">
-                <div class="col-lg-4 text-center">
+                <div class="col-lg-3 text-center">
                     <div class="service-box">
                         <img class="img-circle" src="./img/team/longqi.jpg" alt="Rounded image" width="150" height="150">
                         <h3><a href="http://destrin.smalldata.io">Longqi Yang</a></h3>
                         <p>Cornell Tech, Cornell University</p>
                     </div>
                 </div>
-                <div class="col-lg-4 text-center">
+                <div class="col-lg-3 text-center">
                     <div class="service-box">
                         <img class="img-circle" src="./img/organizers/fdiaz.png" alt="Rounded image" width="150" height="150">
-                        <h3><a href="https://sites.google.com/site/trahman266/">Fernando Diaz</a></h3>
+                        <h3><a href="http://fernando.diaz.nyc/">Fernando Diaz</a></h3>
                         <p>Spotify</p>
                     </div>
                 </div>
-                <div class="col-lg-4 text-center">
+                <div class="col-lg-3 text-center">
                     <div class="service-box">
                         <img class="img-circle" src="./img/organizers/yuwang.jpeg" alt="Rounded image" width="150" height="150">
-                        <h3><a href="http://michaelsobolev.com">Yu Wang</a></h3>
+                        <h3><a href="https://www.linkedin.com/in/yu-wang-20b81720/">Yu Wang</a></h3>
                         <p>Himalaya</p>
                     </div>
                 </div>
 
-                <div class="col-lg-4 text-center">
+                <div class="col-lg-3 text-center">
                     <div class="service-box">
-                        <img class="img-circle" src="../img/organizers/deborah.jpg" alt="Rounded image" width="150" height="150">
+                        <img class="img-circle" src="./img/organizers/deborah.jpg" alt="Rounded image" width="150" height="150">
                         <h3><a href="http://destrin.smalldata.io">Deborah Estrin</a></h3>
                         <p>Cornell Tech, Cornell University</p>
                     </div>
@@ -346,19 +346,9 @@
                 <hr class="primary">
             </div>
         <div class="row text-black-faded">
-            <div class="col-lg-8 col-lg-offset-4 text-left">
+            <div class="text-center">
+                <p>TBD</p>
 
-              <ul>
-                     <li><p><a href="http://www.cs.dartmouth.edu/~campbell/">Andrew Campbell</a>, Google and Dartmouth College</p></li>
-                     <li> <p><a href="http://www.cs.cornell.edu/~tanzeem/">Tanzeem Choudhury</a>, Cornell University and Health Rhythms </p></li>
-                     <li><p><a href="https://people.cs.umass.edu/~dganesan/">Deepak Ganesan</a>, University of Massachussets Amherst</p></li>
-                     <li><p><a href="https://www.microsoft.com/en-us/research/people/marycz/">Mary Czerwinski</a>, Microsoft Research</p></li>
-                     <li><p><a href="http://niclane.org/">Nic Lane</a>, University of Oxford and Nokia Bell Labs</p></li>
-                     <li><p><a href="http://www.cl.cam.ac.uk/~cm542/">Cecilia Mascolo</a>, University of Cambridge</p></li>
-                     <li><p><a href="http://www.ucl.ac.uk/~ucfamus/">Mirco Musolesi</a>, University College London</p></li>
-                     <li><p><a href="https://www.linkedin.com/in/abhishekpratap">Abhishek Pratap</a>, Sage Bionetworks</p></li>
-                     <li><p><a href="http://www.ee.ucla.edu/mani-srivastava/">Mani Srivastava</a>, University of California Los Angeles </p></li>
-                </ul>
             </div>
         </div>
     </div>
@@ -374,7 +364,7 @@
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <hr class="light">
                     <p class="text-black-faded">
-                    If you have any questions, please contact Deborah Estrin (<a href="mailto:destrin@cs.cornell.edu">destrin@cs.cornell.edu</a>), Tauhidur Rahman (<a href="mailto:trahman@cs.umass.edu">trahman@cs.umass.edu</a>), Michael Sobolev (<a href="mailto:michael.sobolev@cornell.edu">michael.sobolev@cornell.edu</a>)
+                    If you have any questions, please contact <a href="mailto:ly283@cornell.edu">Longqi Yang</a> 
                    </p>
                </div>
            </div>
