small changes to kdd

--- a/kdd2018.html
+++ b/kdd2018.html
@@ -53,9 +53,6 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="#about">About Digital Biomarkers</a>
-                    </li>
-                    <li>
                         <a class="page-scroll" href="#CfP">Call For Papers</a>
                     </li>
 <!--                     <li>
@@ -84,6 +81,7 @@
         </div>
     </header>
 
+    <p style="color:grey" align="right"><font size=-1>https://bit.ly/2GkHKP9</font></p>
     <section id="CfP">
         <div class="container">
             <div class="row">
@@ -176,7 +174,7 @@
                         <br>
                         <p align="left"> <strong>Submission format</strong> Submitted paper should be up to 3 pages long (not including references). Submissions are not blind: author names and affiliations should appear on the first page. Papers should be formatted using the <a href="https://www.acm.org/publications/proceedings-template">2017 ACM Master Article Template</a>. For LaTeX users, choose `format=sigconf`. This is the typical, two-column proceedings-style template. Authors do not need to include terms, keywords, or other front matter in their submissions. 
                         
-                        *Instructions adapted from SysML.
+                        <p align="left"><font size=2>*Instructions adapted from SysML.</font></p>
 
                         </p>                        
                     </div>
