digital biomarkers cancel notice

--- a/mobisys2018.html
+++ b/mobisys2018.html
@@ -75,18 +75,36 @@
         <!-- /.container-fluid -->
     </nav>
 
-    <header>
+
+
+<!--     <header>
         <div class="header-content">
             <div class="header-content-inner background-color-black">
-                <h1 style="color:white;"><b>The 2<sup>nd</sup> Workshop on Digital Biomarkers 2018</b></h1>
-                <hr>
-                <p style="background:black; color:white;"> The 2<sup>nd</sup> Workshop on Digital Biomarkers, collocated with MobiSys 2018 offers a unified forum that brings academics, industry researchers and medical practitioners together and seeks novel, innovative and exciting submissions broadly related to the modeling, testing, and validation of new digital biomarkers for predicting incidence of diseases, health conditions, effects of treatments, and interventions.</p>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+                <h3 style="color:black;"><b>The 2<sup>nd</sup> Workshop on Digital Biomarkers 2018</b></h3>
+                <br><br>
+                <h4 style="color:black;" align="left">​We regret that the 2nd workshop on digital biomarkers will not be held at this time. Please contact the organizers if you have any questions. Please check alternative workshops:</h4>
+                <h4 align="left"><a href="http://wpa18.media.mit.edu/">http://wpa18.media.mit.edu/</a></h4>
+                <h4 align="left"><a href="https://sites.google.com/site/wearsys2018/">https://sites.google.com/site/wearsys2018/</a></h4>
+                
             </div>
         </div>
-    </header>
+    </header> -->
 
-    <section id="about">
+     <section >
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-10 col-lg-offset-1 text-center">
+                <h2 style="color:black;"><b>The 2<sup>nd</sup> Workshop on Digital Biomarkers 2018</b></h2>
+                <br><br>
+                <h4 style="color:black;" align="left">​We regret that the 2nd workshop on digital biomarkers will not be held at this time. Please contact the organizers if you have any questions. Please check alternative workshops:</h4>
+                <h4 align="left"><a href="http://wpa18.media.mit.edu/">http://wpa18.media.mit.edu/</a></h4>
+                <h4 align="left"><a href="https://sites.google.com/site/wearsys2018/">https://sites.google.com/site/wearsys2018/</a></h4>
+               </div>
+           </div>
+        </div>
+    </section>   
+
+<!--     <section id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
@@ -102,8 +120,8 @@
         </div>
         </div>
         </div>
-    </section>
-
+    </section> -->
+<!-- 
     <section id="CfP">
         <div class="container">
             <div class="row">
@@ -140,8 +158,8 @@
                         <li> <p>Designing and implementing data feedback and visualization for both participants and caregivers.</p></li>
                         <li> <p>Development of smartphone based automated health interventions with digital biomarkers.</p></li>
 
-                    </ul>
-                   <!--  A PDF version of the Call for Papers can be found <a href="./papers/CFP.pdf">here</a>. If you have any questions, please feel free to contact Tauhidur Rahman (tr266@cornell.edu). -->
+                    </ul> -->
+                   <!--  A PDF version of the Call for Papers can be found <a href="./papers/CFP.pdf">here</a>. If you have any questions, please feel free to contact Tauhidur Rahman (tr266@cornell.edu).
                   </div>
 
                 </div>
@@ -186,7 +204,7 @@
 
             </div>
         </div>
-    </section>
+    </section> -->
 
    <!--  <section id="Program">
         <div class="container">
@@ -335,7 +353,7 @@
 
 
 
-    <section id="program-committee">
+<!--     <section id="program-committee">
         <div class="container">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Program Committee</h2>
@@ -358,7 +376,7 @@
             </div>
         </div>
     </div>
-    </section>
+    </section> -->
 
     <section >
         <div class="container">
