deborah pic change

--- a/kdd2018.html
+++ b/kdd2018.html
@@ -325,7 +325,7 @@
 
                 <div class="col-lg-3 text-center">
                     <div class="service-box">
-                        <img class="img-circle" src="./img/organizers/deborah.jpg" alt="Rounded image" width="150" height="150">
+                        <img class="img-circle" src="./img/organizers/Deborah_Headshot.jpg" alt="Rounded image" width="150" height="150">
                         <h3><a href="http://destrin.smalldata.io">Deborah Estrin</a></h3>
                         <p>Cornell Tech, Cornell University</p>
                     </div>
