--- a/kdd2018.html
+++ b/kdd2018.html
@@ -110,9 +110,9 @@
                         <li><strong>Podcast Content Modeling</strong>
                         <ol style="list-style-type: lower-alpha; padding-bottom: 0;">
                         <li style="margin-left:2em">Speech modeling and understanding for podcasts</li>
-                        <li style="margin-left:2em; padding-bottom: 0;">Natural language processing for podcast transcripts and metadata
+                        <li style="margin-left:2em; padding-bottom: 0;">Natural language processing for podcasts
                         </li>
-                        <li style="margin-left:2em; padding-bottom: 0;">Podcast search
+                        <li style="margin-left:2em; padding-bottom: 0;">Podcast content search
                         </li>
                         <li style="margin-left:2em; padding-bottom: 0;">Podcast summarization
                         </li>
@@ -130,6 +130,18 @@
                         </li>
 
                         <li><strong>Podcast Interaction</strong>
+                        <ol style="list-style-type: lower-alpha; padding-bottom: 0;">
+                        <li style="margin-left:2em">Content production and curation</li>
+                        <li style="margin-left:2em; padding-bottom: 0;">Content distribution
+                        </li>
+                        <li style="margin-left:2em; padding-bottom: 0;">User consumption patterns
+                        </li>  
+                        <li style="margin-left:2em; padding-bottom: 0;">Monetization model
+                        </li>                                             
+                        </ol>
+                        </li>
+
+                        <li><strong>Podcast Market</strong>
                         <ol style="list-style-type: lower-alpha; padding-bottom: 0;">
                         <li style="margin-left:2em">Personal assistants, including recommendation through voice interface, e.g., Amazon Echo and Google Home</li>
                         <li style="margin-left:2em; padding-bottom: 0;">User interaction and interfaces for podcast consumption, including podcast applications
