--- a/kdd2018.html
+++ b/kdd2018.html
@@ -318,7 +318,7 @@
                 <div class="col-lg-3 text-center">
                     <div class="service-box">
                         <img class="img-circle" src="./img/team/longqi.jpg" alt="Rounded image" width="150" height="150">
-                        <h3><a href="http://destrin.smalldata.io">Longqi Yang</a></h3>
+                        <h3><a href="http://www.cs.cornell.edu/~ylongqi/">Longqi Yang</a></h3>
                         <p>Cornell Tech, Cornell University</p>
                     </div>
                 </div>
