--- a/index.html
+++ b/index.html
@@ -533,6 +533,7 @@
                 </div>
             </div>
             <table  class="table">
+
                 <!--<thead>-->
                 <!--<tr>-->
                     <!--<th>-->
@@ -553,20 +554,26 @@
                 <tbody>
                     <tr>
                         <td>
+                            <strong> Small Data: Applications and Architecture.</strong> <a href="papers/small_data_applications__alldata_2018.pdf" style="color:darkblue"><strong>[PDF]</strong></a></strong></br>
+                            HSIEH, C.K., ALQUADDOOMI, F., OKEKE, F., POLLAK, JP, GUNASEKARA, L., ESTRIN, D.<i>Proceedings of the Fourth International Conference on Big Data, Small Data, Linked Data and Open Data, April 2018.</i> 
+                        </td>
+                    </tr>                    
+                    <tr>
+                        <td>
                             <strong> Towards A Framework for Mobile Behavior Change Research.</strong></br>
                             OKEKE, F., SOBOLEV, M., ESTRIN, D. <i>In Technology, Mind, and Society: APAScience, Washington DC, USA, April 2018</i> 
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            <strong> Ranking Subreddits by Classifier Indistinguishability in the Reddit Corpus.</strong></br>
-                            ALQUADDOOMI, F., ESTRIN, D. <i>Proceedings of the Tenth International Conference on Information, Process, and Knowledge Management, 2018.</i> 
+                            <strong> Ranking Subreddits by Classifier Indistinguishability in the Reddit Corpus.</strong> <a href="papers/subreddit_classifier_indistinguishability.pdf" style="color:darkblue"><strong>[PDF]</strong></a></strong></br>
+                            ALQUADDOOMI, F., ESTRIN, D. <i>Proceedings of the Tenth International Conference on Information, Process, and Knowledge Management, March 2018.</i> 
                         </td>
                     </tr>
                     <tr>
                         <td>
                             <strong>OpenRec: A Modular Framework for Extensible Recommendation Algorithms. <a href="http://www.cs.cornell.edu/~ylongqi/paper/YangBGHE18.pdf" style="color:darkblue"><strong>[PDF]</strong></a></strong></br>
-                            YANG, L., BAGDASARYAN, E., GRUENSTEIN, J., HSIEH, C., ESTRIN, D.  <i>Proceedings of the 11th ACM International Conference on Web Search and Data Mining <strong>(WSDM)</strong>, 2018.</i><a href="http://openrec.ai" style="color:black">openrec.ai</a>
+                            YANG, L., BAGDASARYAN, E., GRUENSTEIN, J., HSIEH, C., ESTRIN, D.  <i>Proceedings of the 11th ACM International Conference on Web Search and Data Mining <strong>(WSDM)</strong>, 2018.</i><a href="http://openrec.ai" style="color:black"> openrec.ai</a>
 
                         </td>
                     </tr>
@@ -593,7 +600,7 @@
                         <td>
                             <strong>Collaborative Metric Learning. </strong><a href="http://www.cs.cornell.edu/~ylongqi/paper/HsiehYCLBE17.pdf" style="color:darkblue"><strong>[PDF]</strong></a>
                             </br>
-                            HSIEH, C.H., YANG, L., CUI, Y., LIN, T.Y., BELONGIE, S., ESTRIN, D., 26th International World Wide Web Conference <strong>(WWW)</strong>, Perth, Australia, April 2017.
+                            HSIEH, C.H., YANG, L., CUI, Y., LIN, T.Y., BELONGIE, S., ESTRIN, D., In <i> Proceedings of 26th International World Wide Web Conference <strong>(WWW)</strong>, Perth, Australia, April 2017.</i>
 
                         </td>
                     </tr>
