--- a/kdd2018.html
+++ b/kdd2018.html
@@ -200,14 +200,12 @@
         </div>
     </section>
 
-   <!--  <section id="Program">
+    <section id="Program">
         <div class="container">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Program</h2>
                 <hr class="primary">
             </div>
-
-            Venue: Room Hawk B in the Seneca Niagara Resort and Casino (310 4th St. Niagara Falls, NY 14303).
 
             <div class="col-lg-12 text-left">
 
@@ -220,31 +218,30 @@
               </thead>
               <tbody>
                   <tr>
-                  <th class="text-nowrap" scope="row">8:00–9:00</th>
-                  <td>Breakfast (LaCascata Restaurant) and Registration (Meeting Room Entrance Area)</td>
+                  <th class="text-nowrap" scope="row">8:30–8:40</th>
+                  <td>Introduction and Welcome</td>
                   </tr>
 
                   <tr>
-                  <th class="text-nowrap" scope="row">9:00–9:15</th>
-                  <td>Welcome and Introduction</td>
+                  <th class="text-nowrap" scope="row">8:40–9:30</th>
+                  <td>Session I: Finding and Consuming Podcasts</td>
                   </tr>
 
                   <tr>
-                  <th class="text-nowrap" scope="row">9:15–10:00</th>
-                  <td>Keynote title: A Quantum of Solace: Digital Traces and Mental Health <br/> keynote speaker: <a href="http://retscio.net">Vincent M. B. Silenzio, MD, MPH, University of Rochester School of Medicine and Dentistry</a> <br/>
-                  Abstract: What does the Higgs Boson have to do with measuring the digital traces of mental health phenomena, such as depression, anxiety, or suicidal thoughts or behaviors? As it turns out, plenty. In this session, we will explore a useful metaphor for understanding physicists’ discovery of the Higgs Boson after many decades. We examine the implications of this metaphor as a tool to develop a conceptual framework for the study of digital biomarkers, particularly with respect to those digital traces (and absences) that may reflect the range of biological, psychological, and social dimensions in mental health. However, even beyond the narrow confines of mental health, this conceptual framework underscores the need to deeply examine the ways in which we model the health phenomena being studied.</td>
+                  <th class="text-nowrap" scope="row">10:00–11:00</th>
+                  <td>Session II: Podcasts Search and Recommendation</td>
                   </tr>
 
                   <tr>
-                  <th class="text-nowrap" scope="row">10:00–10:30</th>
-                  <td>Coffee Break (Meeting Room Hallway)</td>
+                  <th class="text-nowrap" scope="row">11:00–12:00</th>
+                  <td>Session III: Applications & Industry</td>
                   </tr>
 
-                  <tr>
-                  <th class="text-nowrap" scope="row">10:30–11:15</th>
-                  <td> Exercise 1: Identifying key problems</td>
-                  </tr>
-
+  <!--                 <tr>
+                  <th class="text-nowrap" scope="row">Additional activities</th>
+                  <td> </td>
+                  </tr> -->
+<!-- 
                   <tr>
                   <th class="text-nowrap" scope="row">11:15–12:00</th>
                   <td><b>Session 1: Digital Biomarkers for Behavioral and Cognitive Health</b><br /><br />
@@ -299,13 +296,30 @@
                   <tr>
                   <th class="text-nowrap" scope="row">4:00–4:30</th>
                   <td>Exercise 3: Identifying next steps and Wrap up</td>
-                  </tr>
+                  </tr> -->
 
             </tbody>
             </table>
         </div>
     </div>
-    </section> -->
+    </section>
+
+
+<!--         <div class="container">
+            <div class="row text-black-faded">
+                <div class="col-md-12 col-md-12 text-center">
+                    <div class="service-box" >
+                        <div class="col-lg-12 text-center">
+                            <h2 class="section-heading">Schedule</h2>
+                            <hr class="primary">
+                        </div>
+
+                    </div>
+                    
+                </div>
+
+            </div>
+        </div> -->
 
         <div class="container">
             <div class="row text-black-faded">
