--- a/kdd2018.html
+++ b/kdd2018.html
@@ -25,6 +25,8 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/creative2.css" type="text/css">
 
+ <!--    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous"> -->
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -55,9 +57,9 @@
                     <li>
                         <a class="page-scroll" href="#CfP">Call For Papers</a>
                     </li>
-<!--                     <li>
+                    <li>
                         <a class="page-scroll" href="#Program">Program</a>
-                    </li> -->
+                    </li>
                     <li>
                         <a class="page-scroll" href="#organizers">Organizers</a>
                     </li>
@@ -159,6 +161,8 @@
             </div>
         </div>
 
+
+
         <div class="container">
             <div class="row text-black-faded">
                 <div class="col-md-12 col-md-12 text-center">
@@ -176,6 +180,8 @@
 
             </div>
         </div>
+
+
 
         <div class="container">
             <div class="row text-black-faded">
@@ -198,6 +204,8 @@
 
             </div>
         </div>
+
+
     </section>
 
     <section id="Program">
