--- a/kdd2018.html
+++ b/kdd2018.html
@@ -63,9 +63,9 @@
                     <li>
                         <a class="page-scroll" href="#organizers">Organizers</a>
                     </li>
-                    <li>
+<!--                     <li>
                         <a class="page-scroll" href="#program-committee">Program Committee</a>
-                    </li>
+                    </li> -->
                     
                 </ul>
             </div>
@@ -434,7 +434,7 @@
 
 
 
-    <section id="program-committee">
+<!--     <section id="program-committee">
         <div class="container">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Program Committee</h2>
@@ -447,7 +447,7 @@
             </div>
         </div>
     </div>
-    </section>
+    </section> -->
 
     <section >
         <div class="container">
