--- a/kdd2018.html
+++ b/kdd2018.html
@@ -104,22 +104,46 @@
               <tbody>
                   <tr>
                   <th class="text-nowrap" scope="row">8:30–8:40</th>
-                  <td>Introduction and Welcome</td>
+                  <td><strong>Introduction and Welcome</strong></td>
+
                   </tr>
 
                   <tr>
                   <th class="text-nowrap" scope="row">8:40–9:30</th>
-                  <td>Session I: Finding and Consuming Podcasts</td>
+                  <td><strong>Session I: Finding and Consuming Podcasts</strong>
+                  <ul>
+                    <li>Podcasters Panel </li>
+                    <ul>
+                      <li>Moderator: Julie Riederer (Spotify)</li>
+                      <li>Suchandrika Chakrabarti</li>
+                      <li>Nastaran Tavakoli-Far</li>
+                      <li>Lauren Hutchinson</li>
+                    </ul>
+                    <li>Martha Larson (Delft University of Technology)</li>
+                  </ul>
+                  </td>
                   </tr>
 
                   <tr>
                   <th class="text-nowrap" scope="row">10:00–11:00</th>
-                  <td>Session II: Podcasts Search and Recommendation</td>
+                  <td><strong>Session II: Podcasts Search and Recommendation</strong>
+                  <ul>
+                    <li>Maarten de Rijke (University of Amsterdam)</li>
+                    <li>Gareth Jones (Dublin City University)</li>
+
+                  </ul>
+                  </td>
                   </tr>
 
                   <tr>
                   <th class="text-nowrap" scope="row">11:00–12:00</th>
-                  <td>Session III: Applications & Industry</td>
+                  <td><strong>Session III: Applications & Industry</strong>
+                  <ul>
+                    <li>Legendary.com</li>
+                    <li>Yu Wang, Himalaya Media</li>
+                    <li>Rosie Jones, Spotify</li>
+                  </ul>
+                  </td>
                   </tr>
 
   <!--                 <tr>
