--- a/kdd2018.html
+++ b/kdd2018.html
@@ -139,7 +139,7 @@
                   <th class="text-nowrap" scope="row">11:00–12:00</th>
                   <td><strong>Session III: Applications & Industry</strong>
                   <ul>
-                    <li>Legendary.com</li>
+                    <li>Ahmet Gundogdu, WarnerMedia Applied Analytics Solution</li>
                     <li>Yu Wang, Himalaya Media</li>
                     <li>Rosie Jones, Spotify</li>
                   </ul>
