--- a/kdd2018.html
+++ b/kdd2018.html
@@ -188,7 +188,7 @@
                 <hr class="primary">
             </div>
 
-              <div class="col-lg-3">
+              <div class="col-lg-2">
               </div>
               <div class="col-lg-3 text-center">
                     <div class="service-box">
@@ -196,6 +196,9 @@
                         
                     </div>
                 </div>
+
+              <div class="col-lg-2">
+              </div>
 
               <div class="col-lg-3 text-center">
                     <div class="service-box">
@@ -205,7 +208,7 @@
                     </div>
                 </div>
 
-                 <div class="col-lg-3">
+                 <div class="col-lg-2">
               </div>
 
 
