--- a/kdd2018.html
+++ b/kdd2018.html
@@ -31,6 +31,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/semantic.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/semantic.min.css" rel="stylesheet">
 
+    <style>
+    .row:before, .row:after {display: none !important;}
+  </style>
+
 
 </head>
 
@@ -188,19 +192,16 @@
                 <hr class="primary">
             </div>
 
-              <div class="col-lg-2">
-              </div>
-              <div class="col-lg-3 text-center">
+              <div class="col-lg-6 text-center">
                     <div class="service-box">
                         <a href="https://www.spotify.com/us/"><img src="./img/spotify.jpg"  width="300" height="200"></a>
                         
                     </div>
                 </div>
 
-              <div class="col-lg-2">
-              </div>
 
-              <div class="col-lg-3 text-center">
+
+              <div class="col-lg-6 text-center">
                     <div class="service-box">
                       <a href="himalaya.com">
                         <img src="./img/himalaya.jpg" width="300" height="150"></a>
@@ -208,8 +209,7 @@
                     </div>
                 </div>
 
-                 <div class="col-lg-2">
-              </div>
+
 
 
         <div class="placeholder-100pct">&nbsp;</div>
@@ -222,13 +222,14 @@
 
     <section id="organizers">
 
-        <div style="padding-top: 10%" class="container">
+ <!--        <div style="padding-top: 10%" class="container"> -->
          <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Organizers</h2>
                     <hr class="primary">
                 </div>
-          </div>
+
             <div class="row text-black-faded">
+
                 <div class="col-lg-3 text-center">
                     <div class="service-box">
                         <img class="img-circle" src="./img/team/longqi.jpg" alt="Rounded image" width="150" height="150">
@@ -257,7 +258,9 @@
                         <h3><a href="http://destrin.smalldata.io/">Deborah Estrin</a></h3>
                         <p>Cornell Tech, Cornell University</p>
                     </div>
-                </div>                  
+                </div>
+<!--                 <div class="col-lg-1">
+              </div>  -->                 
      
           </div>
 
