--- a/kdd2018.html
+++ b/kdd2018.html
@@ -148,8 +148,8 @@
                   <br><br>
                     <div class="ui divided items">
                       <div class="item">
-                        <img src="./img/ahmet.jpeg" alt="" width="75" height="75" >
-                        <div style="padding-left: 2% " class="middle aligned content">
+<!--                         <img src="./img/ahmet.jpeg" alt="" width="75" height="75" > -->
+                        <div class="middle aligned content">
                           <p><strong>Ahmet Gundogdu</strong> - WarnerMedia Applied Analytics Solution</p>
                           <p>Recognizing Film Entities in Podcasts</p>
                         </div>
